/**
 * PRD Template Structure Snapshot Tests
 *
 * These tests verify that PRD output templates maintain
 * consistent structure across versions.
 */

import { describe, it, expect, beforeEach, afterEach, jest } from '@jest/globals';
import fs from 'fs-extra';
import path from 'path';
import { fileURLToPath } from 'url';
import {
  sanitizeTimestamps,
  normalizePaths,
  sanitizeForSnapshot,
} from '../helpers/snapshot-utils.js';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

// Mock dependencies
jest.unstable_mockModule('inquirer', () => ({
  default: {
    prompt: jest.fn(),
  },
}));

describe('PRD Template Structure Snapshots', () => {
  const testDir = path.join(__dirname, '../tmp/prd-template-test');

  beforeEach(async () => {
    await fs.ensureDir(testDir);
    process.chdir(testDir);
    jest.clearAllMocks();
  });

  afterEach(async () => {
    process.chdir(__dirname);
    await fs.remove(testDir);
  });

  describe('template file structure', () => {
    const templatesDir = path.join(__dirname, '../../src/templates');

    it('full PRD template should have expected sections', async () => {
      const templatePath = path.join(templatesDir, 'full-prd-template.hbs');

      if (await fs.pathExists(templatePath)) {
        const content = await fs.readFile(templatePath, 'utf-8');

        // Check for major sections - actual templates use metadata.projectName
        expect(content).toContain('{{metadata.projectName}}');
        expect(content).toContain('Problem');

        // Structure should be stable
        const sanitized = sanitizeForSnapshot(content);
        expect(sanitized).toMatchSnapshot('full-prd-template-structure');
      }
    });

    it('quick PRD template should have expected sections', async () => {
      const templatePath = path.join(templatesDir, 'quick-prd-template.hbs');

      if (await fs.pathExists(templatePath)) {
        const content = await fs.readFile(templatePath, 'utf-8');

        // Check for major sections - actual templates use metadata.projectName
        expect(content).toContain('{{metadata.projectName}}');

        // Structure should be stable
        const sanitized = sanitizeForSnapshot(content);
        expect(sanitized).toMatchSnapshot('quick-prd-template-structure');
      }
    });
  });

  describe('generated PRD structure', () => {
    it('generated full PRD should have consistent structure', async () => {
      // Create a mock PRD output
      const mockPRD = `# Product Requirements Document

## Project: Test Project

### Overview
This is a test PRD generated for snapshot testing.

### Business Objectives
- Objective 1
- Objective 2

### User Stories
1. As a user, I want to test the system

### Technical Requirements
- Requirement 1
- Requirement 2

### Success Metrics
- Metric 1
- Metric 2

### Timeline
Phase 1: Setup
Phase 2: Implementation

---
Generated by Clavix`;

      const sanitized = sanitizeTimestamps(mockPRD);
      expect(sanitized).toMatchSnapshot('generated-full-prd');
    });

    it('generated quick-ref PRD should have consistent structure', async () => {
      // Create a mock quick-ref PRD output
      const mockQuickRef = `# Test Project - Quick Reference

## Key Points
- Point 1
- Point 2

## Core Features
1. Feature A
2. Feature B

## Tech Stack
- Technology 1
- Technology 2

## Priorities
1. High: Core functionality
2. Medium: Nice to have
3. Low: Future enhancements

---
Generated by Clavix`;

      const sanitized = sanitizeTimestamps(mockQuickRef);
      expect(sanitized).toMatchSnapshot('generated-quick-ref-prd');
    });

    it('generated mini PRD should have consistent structure', async () => {
      // Create a mock mini PRD output
      const mockMiniPRD = `# Test Project

## Summary
Brief project description for AI consumption.

## Features
- [x] Feature 1
- [ ] Feature 2
- [ ] Feature 3

## Requirements
1. Must have X
2. Should have Y

---
Generated by Clavix`;

      const sanitized = sanitizeTimestamps(mockMiniPRD);
      expect(sanitized).toMatchSnapshot('generated-mini-prd');
    });
  });

  describe('tasks.md structure', () => {
    it('generated tasks.md should have consistent structure', () => {
      const mockTasks = `# Implementation Tasks: Test Project

## Phase 1: Setup

### Task 1.1: Initialize Project
- [ ] Description of task
- **ID**: phase-1-setup-1
- **Dependencies**: None
- **Estimated effort**: Small

### Task 1.2: Configure Dependencies
- [ ] Configure project dependencies
- **ID**: phase-1-setup-2
- **Dependencies**: phase-1-setup-1
- **Estimated effort**: Small

## Phase 2: Core Implementation

### Task 2.1: Build Core Module
- [ ] Implement core functionality
- **ID**: phase-2-core-1
- **Dependencies**: phase-1-setup-2
- **Estimated effort**: Medium

---
Generated by Clavix`;

      const sanitized = sanitizeTimestamps(mockTasks);
      expect(sanitized).toMatchSnapshot('generated-tasks-md');
    });

    it('completed tasks should maintain structure', () => {
      const mockCompletedTasks = `# Implementation Tasks: Test Project

## Phase 1: Setup

### Task 1.1: Initialize Project
- [x] Description of task
- **ID**: phase-1-setup-1
- **Completed**: 2024-01-15

### Task 1.2: Configure Dependencies
- [x] Configure project dependencies
- **ID**: phase-1-setup-2
- **Completed**: 2024-01-15

## Phase 2: Core Implementation

### Task 2.1: Build Core Module
- [ ] Implement core functionality
- **ID**: phase-2-core-1

---
Generated by Clavix`;

      const sanitized = sanitizeTimestamps(mockCompletedTasks);
      expect(sanitized).toMatchSnapshot('completed-tasks-md');
    });
  });

  describe('PRD sections validation', () => {
    it('PRD should contain required sections', () => {
      const requiredSections = [
        'Overview',
        'Business Objectives',
        'User Stories',
        'Technical Requirements',
      ];

      const mockPRD = `# PRD
## Overview
Content
## Business Objectives
Content
## User Stories
Content
## Technical Requirements
Content`;

      for (const section of requiredSections) {
        expect(mockPRD).toContain(section);
      }
    });

    it('quick-ref should be more concise than full PRD', () => {
      const fullPRD = `# Full PRD
## Section 1
Long detailed content here that explains everything in great detail.
## Section 2
More detailed content with explanations.
## Section 3
Even more content.`;

      const quickRef = `# Quick Reference
- Point 1
- Point 2
- Point 3`;

      expect(quickRef.length).toBeLessThan(fullPRD.length);
    });
  });

  describe('template variables', () => {
    it('templates should use consistent variable names', () => {
      // These are the actual variables used in the real templates
      const expectedVariables = ['metadata.projectName', 'problem', 'features'];

      // Mock template content matching actual structure
      const mockTemplate = `
# {{metadata.projectName}}

## Problem & Goal
{{problem}}

## Features
{{features}}
`;

      for (const variable of expectedVariables) {
        expect(mockTemplate).toContain(`{{${variable}}}`);
      }
    });
  });
});
