// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PRD Template Structure Snapshots generated PRD structure generated full PRD should have consistent structure: generated-full-prd 1`] = `
"# Product Requirements Document

## Project: Test Project

### Overview
This is a test PRD generated for snapshot testing.

### Business Objectives
- Objective 1
- Objective 2

### User Stories
1. As a user, I want to test the system

### Technical Requirements
- Requirement 1
- Requirement 2

### Success Metrics
- Metric 1
- Metric 2

### Timeline
Phase 1: Setup
Phase 2: Implementation

---
Generated by Clavix"
`;

exports[`PRD Template Structure Snapshots generated PRD structure generated mini PRD should have consistent structure: generated-mini-prd 1`] = `
"# Test Project

## Summary
Brief project description for AI consumption.

## Features
- [x] Feature 1
- [ ] Feature 2
- [ ] Feature 3

## Requirements
1. Must have X
2. Should have Y

---
Generated by Clavix"
`;

exports[`PRD Template Structure Snapshots generated PRD structure generated quick-ref PRD should have consistent structure: generated-quick-ref-prd 1`] = `
"# Test Project - Quick Reference

## Key Points
- Point 1
- Point 2

## Core Features
1. Feature A
2. Feature B

## Tech Stack
- Technology 1
- Technology 2

## Priorities
1. High: Core functionality
2. Medium: Nice to have
3. Low: Future enhancements

---
Generated by Clavix"
`;

exports[`PRD Template Structure Snapshots tasks.md structure completed tasks should maintain structure: completed-tasks-md 1`] = `
"# Implementation Tasks: Test Project

## Phase 1: Setup

### Task 1.1: Initialize Project
- [x] Description of task
- **ID**: phase-1-setup-1
- **Completed**: [DATE]

### Task 1.2: Configure Dependencies
- [x] Configure project dependencies
- **ID**: phase-1-setup-2
- **Completed**: [DATE]

## Phase 2: Core Implementation

### Task 2.1: Build Core Module
- [ ] Implement core functionality
- **ID**: phase-2-core-1

---
Generated by Clavix"
`;

exports[`PRD Template Structure Snapshots tasks.md structure generated tasks.md should have consistent structure: generated-tasks-md 1`] = `
"# Implementation Tasks: Test Project

## Phase 1: Setup

### Task 1.1: Initialize Project
- [ ] Description of task
- **ID**: phase-1-setup-1
- **Dependencies**: None
- **Estimated effort**: Small

### Task 1.2: Configure Dependencies
- [ ] Configure project dependencies
- **ID**: phase-1-setup-2
- **Dependencies**: phase-1-setup-1
- **Estimated effort**: Small

## Phase 2: Core Implementation

### Task 2.1: Build Core Module
- [ ] Implement core functionality
- **ID**: phase-2-core-1
- **Dependencies**: phase-1-setup-2
- **Estimated effort**: Medium

---
Generated by Clavix"
`;

exports[`PRD Template Structure Snapshots template file structure full PRD template should have expected sections: full-prd-template-structure 1`] = `
"# Product Requirements Document
## {{metadata.projectName}}

---

**Generated:** {{timestamp}}
**Version:** {{metadata.version}}
**Generated by:** {{metadata.generatedBy}}

---

## 1. Problem & Goal

{{problem}}

## 2. Core Features

{{features}}

{{#if technical}}
## 3. Technical Requirements

{{technical}}
{{/if}}

{{#if outOfScope}}
## 4. Out of Scope

{{outOfScope}}
{{/if}}

{{#if additional}}
## 5. Additional Context

{{additional}}
{{/if}}

---

## Acceptance Criteria

The following criteria must be met for this project to be considered complete:

1. ✓ All core features are implemented and functional
2. ✓ Solution addresses the stated problem and goal
{{#if technical}}
3. ✓ Technical requirements are satisfied
{{/if}}
{{#if outOfScope}}
4. ✓ Out-of-scope items are explicitly not included
{{/if}}
5. ✓ Implementation is well-structured, maintainable, and tested

---

## Open Questions

- [ ] What is the expected user volume/scale?
- [ ] Are there any compliance or regulatory requirements?
- [ ] What is the deployment strategy?
- [ ] What monitoring and analytics are needed?
- [ ] What documentation is required?

---

## Appendix

### Next Steps

1. Review and validate this PRD with stakeholders
2. Break down features into technical tasks
3. Create detailed technical specifications
4. Estimate effort and timeline
5. Begin development

### Resources

- Use \`quick-prd.md\` for AI-assisted development
- Update this document as requirements evolve
- Link to design mockups, prototypes, or research

---

*Generated with Clavix Planning Mode – Edit and refine as needed for your project.*
"
`;

exports[`PRD Template Structure Snapshots template file structure quick PRD template should have expected sections: quick-prd-template-structure 1`] = `
"# Quick PRD: {{metadata.projectName}}

*Optimized for vibecoding and AI-assisted development*

---

## Problem & Goal

{{problem}}

## Core Features

{{features}}

{{#if technical}}
## Technical Requirements

{{technical}}
{{/if}}

{{#if outOfScope}}
## Out of Scope

{{outOfScope}}
{{/if}}

{{#if additional}}
## Additional Context

{{additional}}
{{/if}}

---

**Development Instructions:**

Implement the solution described above, ensuring:
- All core features are fully functional
- Solution addresses the stated problem and goal
{{#if technical}}
- Technical requirements are satisfied
{{/if}}
{{#if outOfScope}}
- Out-of-scope items are explicitly not included
{{/if}}

Focus on creating a well-structured, maintainable, and tested implementation.

---

*Generated with Clavix Planning Mode: {{timestamp}} | Optimized for AI-assisted development*
"
`;
